Fix Issue with Balance and Descriptions  Overlapping - Added a max character limit

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -197,6 +197,10 @@ h1 {
   margin-bottom: 30px;
 }
 
+#person{
+    color: grey;
+}
+
 #split-button {
   width: 100%;
   max-width: 150px;
